--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react": "^16.9.0",
     "react-compound-slider": "^2.2.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.0",
+    "react-scripts": "3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
