--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "bootstrap": "3",
+    "eslint": "^6.1.0",
     "react": "^16.9.0",
     "react-compound-slider": "^2.2.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.0"
+    "react-scripts": "3.1.0",
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
